Market, Predict, Portfolio Views

--- a/markt/ledger.html
+++ b/markt/ledger.html
@@ -11,14 +11,14 @@
 	<body>
 		<div class="row small-collapse">
 			<div class="columns fullWidth">
-				<div class="dashboard">
+				<div class="ledger">
 					<header>
-						<h2 class="header">MARKET</h2>
+						<h2 class="header">PORTFOLIO</h2>
 						<div class="graph-trend-shadow">
-							<i class="fi-graph-trend"></i>
+							<i class="fi-book"></i>
 						</div>
 						<div class="graph-trend">
-							<span class="fi-graph-trend"></span>
+							<span class="fi-book"></span>
 						</div>
 					</header>
 					<article>
@@ -29,69 +29,93 @@
 									<span class="prediction-title">Prediction</span> | <span class="prediction-author">@tijptjik</span><br />
 									<span class="temp">Another passenger plane goes missing without a trace for at least 30 days.</span>
 								</div>
-								<div class="prediction-rate column small-4">
+								<div class="prediction-rate text-center column small-4">
+									<span class="prediction-title">Contract</span>
 									<div class="row align-spaced align-middle clearfix">
 										<div class="column">
-											<h4><i class="fi-dollar"></i>86</h4>
-											<a href="#animatedModal" class="button expanded primary tiny button-modal">YES</a>
+											<h4 class="yes"><i class="fi-dollar"></i>86</h4>
+											<p>you</p>
 										</div>
 										<div class="column">
-											<h4><i class="fi-dollar"></i>14</h4>
-											<a href="#animatedModal" class="button expanded alert tiny button-modal">NO</a>
+											<h4 class="no"><i class="fi-dollar"></i>14</h4>
+											<p>them</p>
+										</div>
+									</div>
+										<div class="row align-spaced align-middle clearfix">
+											<div class="column">
+												<a href="" class="button secondary expanded">@szs</a>
+											</div>
+										</div>
+								</div>
+							</li>
+							<li class="prediction row align-middle">
+								<div class="column fullWidth">
+									<span class="prediction-title">Prediction</span> | <span class="prediction-author">@tijptjik</span><br />
+									<span class="temp">Another passenger plane goes missing without a trace for at least 30 days.</span>
+								</div>
+								<div class="prediction-rate text-center column small-4">
+									<span class="prediction-title">OUTBID</span>
+									<div class="row align-spaced align-middle clearfix">
+										<div class="column">
+											<h4 class="yes"><i class="fi-dollar"></i>86</h4>
+											<p>you</p>
+										</div>
+										<div class="column">
+											<h4 class="yes-outbid"><i class="fi-dollar"></i>89</h4>
+											<p>them</p>
+										</div>
+										</div>
+										<div class="row align-spaced align-middle clearfix">
+											<div class="column">
+											<a href="" class="button expanded">BID $90</a>
 										</div>
 									</div>
 								</div>
 							</li>
 							<li class="prediction row align-middle">
 								<div class="column fullWidth">
-									<span class="prediction-title">Prediction</span> | <span class="prediction-author">@dickson</span><br />
-									<span class="temp">Donald Trump will run as an independent candidate in the presidential elections.</span>
+									<span class="prediction-title">Prediction</span> | <span class="prediction-author">@tijptjik</span><br />
+									<span class="temp">Another passenger plane goes missing without a trace for at least 30 days.</span>
 								</div>
-								<div class="prediction-rate column small-4">
+								<div class="prediction-rate text-center column small-4">
+									<span class="prediction-title">OUTBID</span><br />
 									<div class="row align-spaced align-middle clearfix">
 										<div class="column">
-											<h4><i class="fi-dollar"></i>56</h4>
-											<a href="#animatedModal" class="button expanded primary tiny button-modal">YES</a>
+											<h4 class="no"><i class="fi-dollar"></i>25</h4>
+											<p>you</p>
 										</div>
 										<div class="column">
-											<h4><i class="fi-dollar"></i>43</h4>
-											<a href="#animatedModal" class="button expanded alert tiny button-modal">NO</a>
+											<h4 class="no-outbid"><i class="fi-dollar"></i>35</h4>
+											<p>them</p>
+										</div>
+										</div>
+										<div class="row align-spaced align-middle clearfix">
+											<div class="column">
+											<a href="" class="button alert expanded">BID $36</a>
 										</div>
 									</div>
 								</div>
 							</li>
 							<li class="prediction row align-middle">
 								<div class="column fullWidth">
-									<span class="prediction-title">Prediction</span> | <span class="prediction-author">@bmmcord</span><br />
-									<span class="temp">Hillary Clinton will play the saxophone during her presidential campaign.</span>
+									<span class="prediction-title">Prediction</span> | <span class="prediction-author">@tijptjik</span><br />
+									<span class="temp">Another passenger plane goes missing without a trace for at least 30 days.</span>
 								</div>
-								<div class="prediction-rate column small-4">
+								<div class="prediction-rate text-center column small-4">
+									<span class="prediction-title">NOMATCH</span><br />
 									<div class="row align-spaced align-middle clearfix">
 										<div class="column">
-											<h4><i class="fi-dollar"></i>5</h4>
-											<a href="#animatedModal" class="button expanded primary tiny button-modal">YES</a>
+											<h4 class="no"><i class="fi-dollar"></i>25</h4>
+											<p>you</p>
 										</div>
 										<div class="column">
-											<h4><i class="fi-dollar"></i>92</h4>
-											<a href="#animatedModal" class="button expanded alert tiny button-modal">NO</a>
+											<h4 class="no-outbid"><i class="fi-price-tag"></i></h4>
+											<p> ---- </p>
 										</div>
-									</div>
-								</div>
-							</li>
-							<li class="prediction row align-middle">
-								<div class="column fullWidth">
-									<span class="prediction-title">Prediction</span> | <span class="prediction-author">@szs</span><br />
-									<span class="temp">Hong Kong runs out of names for buildings.</span>
-								</div>
-								<div class="prediction-rate column small-4">
-									<div class="row align-spaced align-middle clearfix">
-										<div class="column">
-											<h4><i class="fi-dollar"></i>5</h4>
-											<a href="#animatedModal" class="button expanded primary tiny button-modal">YES</a>
 										</div>
-										<div class="column">
-											<h4><i class="fi-dollar"></i>92</h4>
-											<a href="#animatedModal" class="button expanded alert tiny button-modal">NO</a>
+										<div class="row align-spaced align-middle clearfix">
+											<div class="column">
+											<a class="button secondary expanded">TBA</a>
 										</div>
 									</div>
 								</div>
