--- a/markt/profile.html
+++ b/markt/profile.html
@@ -13,7 +13,7 @@
 			<div class="columns fullWidth">
 				<div class="dashboard">
 					<header>
-						<h2 class="header">MARKET</h2>
+						<h2 class="header">PROFILE</h2>
 						<div class="graph-trend-shadow">
 							<i class="fi-graph-trend"></i>
 						</div>
@@ -22,82 +22,6 @@
 						</div>
 					</header>
 					<article>
-						
-						<ul>
-							<li class="prediction row align-middle">
-								<div class="column fullWidth">
-									<span class="prediction-title">Prediction</span> | <span class="prediction-author">@tijptjik</span><br />
-									<span class="temp">Another passenger plane goes missing without a trace for at least 30 days.</span>
-								</div>
-								<div class="prediction-rate column small-4">
-									<div class="row align-spaced align-middle clearfix">
-										<div class="column">
-											<h4><i class="fi-dollar"></i>86</h4>
-											<a href="#animatedModal" class="button expanded primary tiny button-modal">YES</a>
-										</div>
-										<div class="column">
-											<h4><i class="fi-dollar"></i>14</h4>
-											<a href="#animatedModal" class="button expanded alert tiny button-modal">NO</a>
-										</div>
-									</div>
-								</div>
-							</li>
-							<li class="prediction row align-middle">
-								<div class="column fullWidth">
-									<span class="prediction-title">Prediction</span> | <span class="prediction-author">@dickson</span><br />
-									<span class="temp">Donald Trump will run as an independent candidate in the presidential elections.</span>
-								</div>
-								<div class="prediction-rate column small-4">
-									<div class="row align-spaced align-middle clearfix">
-										<div class="column">
-											<h4><i class="fi-dollar"></i>56</h4>
-											<a href="#animatedModal" class="button expanded primary tiny button-modal">YES</a>
-										</div>
-										<div class="column">
-											<h4><i class="fi-dollar"></i>43</h4>
-											<a href="#animatedModal" class="button expanded alert tiny button-modal">NO</a>
-										</div>
-									</div>
-								</div>
-							</li>
-							<li class="prediction row align-middle">
-								<div class="column fullWidth">
-									<span class="prediction-title">Prediction</span> | <span class="prediction-author">@bmmcord</span><br />
-									<span class="temp">Hillary Clinton will play the saxophone during her presidential campaign.</span>
-								</div>
-								<div class="prediction-rate column small-4">
-									<div class="row align-spaced align-middle clearfix">
-										<div class="column">
-											<h4><i class="fi-dollar"></i>5</h4>
-											<a href="#animatedModal" class="button expanded primary tiny button-modal">YES</a>
-										</div>
-										<div class="column">
-											<h4><i class="fi-dollar"></i>92</h4>
-											<a href="#animatedModal" class="button expanded alert tiny button-modal">NO</a>
-										</div>
-									</div>
-								</div>
-							</li>
-							<li class="prediction row align-middle">
-								<div class="column fullWidth">
-									<span class="prediction-title">Prediction</span> | <span class="prediction-author">@szs</span><br />
-									<span class="temp">Hong Kong runs out of names for buildings.</span>
-								</div>
-								<div class="prediction-rate column small-4">
-									<div class="row align-spaced align-middle clearfix">
-										<div class="column">
-											<h4><i class="fi-dollar"></i>5</h4>
-											<a href="#animatedModal" class="button expanded primary tiny button-modal">YES</a>
-										</div>
-										<div class="column">
-											<h4><i class="fi-dollar"></i>92</h4>
-											<a href="#animatedModal" class="button expanded alert tiny button-modal">NO</a>
-										</div>
-									</div>
-								</div>
-							</li>
-						</ul>
-						
 					</article>
 				</div>
 			</div>
