--- a/markt/account.html
+++ b/markt/account.html
@@ -22,6 +22,14 @@
 						</div>
 					</header>
 					<article>
+					<div class="row">
+						<div class="columns small-6 align-center">
+							<h2>Profile Name</h2>
+						</div>
+					</div>
+					<div class="row text-center align-center">
+						<a href="" class="button expanded small-6">log out</a>
+					</div>
 					</article>
 				</div>
 			</div>
@@ -62,5 +70,6 @@
 		<script src="bower_components/what-input/what-input.js"></script>
 		<script src="bower_components/foundation-sites/dist/foundation.js"></script>
 		<script src="js/app.js"></script>
+		<script src="js/markt.js"></script>
 	</body>
 </html>
