--- a/markt/index.html
+++ b/markt/index.html
@@ -7,9 +7,9 @@
     <title>Markt - Symbol & Key Prediction Market</title>
     <link rel="stylesheet" href="css/app.css">
   </head>
-  <body>
+  <body id="index">
     <main class="row align-center align-middle">
-    <div class="columns log-in-form medium-4 text-center">
+    <div class="columns log-in-form medium-4 text-center align-center align-middle">
       <form>
         <h3>HOLIDAY SPECIAL</h3>
         <input name='email' type="email" placeholder="Email Address">
@@ -37,5 +37,6 @@
     <script src="bower_components/foundation-sites/dist/foundation.js"></script>
     <script src="bower_components/foundation-sites/dist/foundation.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
