--- a/markt/predict.html
+++ b/markt/predict.html
@@ -132,6 +132,7 @@
 		<script src="bower_components/what-input/what-input.js"></script>
 		<script src="bower_components/foundation-sites/dist/foundation.js"></script>
 		<script src="js/app.js"></script>
+		<script src="js/markt.js"></script>
 	</body>
 </html>
 </html>
