--- a/markt/profile.html
+++ b/markt/profile.html
@@ -22,6 +22,9 @@
 						</div>
 					</header>
 					<article>
+					<div class="row text-center align-center">
+						<a href="" class="button expanded small-2">log out</a>
+					</div>
 					</article>
 				</div>
 			</div>
@@ -96,5 +99,6 @@
 		<script src="bower_components/what-input/what-input.js"></script>
 		<script src="bower_components/foundation-sites/dist/foundation.js"></script>
 		<script src="js/app.js"></script>
+		<script src="js/markt.js"></script>
 	</body>
 </html>
