--- a/markt/account.html
+++ b/markt/account.html
@@ -28,7 +28,7 @@
 						</div>
 					</div>
 					<div class="row text-center align-center">
-						<a href="" class="button expanded small-6">log out</a>
+						<a href="" class="button logout expanded small-6">log out</a>
 					</div>
 					</article>
 				</div>
@@ -50,7 +50,7 @@
 						</a>
 					</li>
 					<li class="column small-3 fullWidth">
-						<a href="ledger.html" class="">
+						<a href="portfolio.html" class="">
 							<i class="fi-book"></i>
 							<span>Portfolio</span>
 						</a>
