--- a/markt/index.html
+++ b/markt/index.html
@@ -11,10 +11,10 @@
     <main class="row align-center align-middle">
     <div class="columns log-in-form medium-4 text-center align-center align-middle">
       <form>
-        <h3>HOLIDAY SPECIAL</h3>
+        <img src="images/sk.png">
         <input name='email' type="email" placeholder="Email Address">
         <input name='password' type="password" placeholder="Password">
-        <a class="button expanded submit">Play Markt</a>
+        <a class="button expanded submit">PLAY MARKT</a>
       </form>
       <div class="alert error callout" data-closable="fade-out">
         <button class="close-button" data-close>&times;</button>
