--- a/markt/dashboard.html
+++ b/markt/dashboard.html
@@ -239,7 +239,7 @@
 			withUserName(contract, e, function(contract){
 				enterContract(contract,
 					function(){
-						// window.location.href = "./portfolio.html";
+						window.location.href = "./portfolio.html";
 				});
 			});
 
